<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <EditText
        android:id="@+id/edit_text_endpoint_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:hint="@string/endpoint_url_input_hint"
        android:inputType="textUri" />

    <EditText
        android:id="@+id/edit_text_public_api_key"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:hint="@string/api_token_input_hint"
        android:inputType="text" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/checkbox_extended_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:text="@string/checkbox_extended_result_description" />

</LinearLayout>