<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edit_text_linked_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        android:hint="@string/linked_id_edit_text_hint" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/enable_tags_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        android:text="@string/enable_tags_checkbox_hint"
        tools:checked="true" />

    <View
        android:id="@+id/tags_divider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_margin="16dp"
        android:background="@color/colorDarkGray"
        android:visibility="gone" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/tags_json_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        android:hint="@string/tags_hint"
        android:visibility="gone" />

    <TextView
        android:id="@+id/json_validator_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:text="@string/json_validator_default_hint"
        android:textAlignment="textStart"
        android:textSize="16sp"
        android:visibility="gone" />
</LinearLayout>