<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <FrameLayout
        android:id="@+id/standard_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/us_endpoint_btn"
                style="@style/MaterialAlertDialog.MaterialComponents.Title.Icon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/us_endpoint"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/eu_endpoint_btn"
                style="@style/MaterialAlertDialog.MaterialComponents.Title.Icon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/eu_endpoint"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/ap_endpoint_btn"
                style="@style/MaterialAlertDialog.MaterialComponents.Title.Icon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/ap_endpoint"
                android:textSize="20sp" />

        </LinearLayout>
    </FrameLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>