<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLightGray">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="8dp"
        android:background="@drawable/bg_main"
        android:orientation="vertical"
        android:paddingVertical="200dp"
        tools:context=".MainActivity">

        <EditText
            android:id="@+id/endpoint_url_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:hint="@string/endpoint_url_input_hint"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/api_token_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:hint="@string/api_token_input_hint"
            android:minHeight="48dp" />

        <TextView
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="8dp"
            android:text="@string/id_description_text" />

        <FrameLayout
            android:id="@+id/id_result_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/progress_indicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:indeterminate="true"
                android:visibility="gone" />

            <TextView
                android:id="@+id/id_text_view"
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="2dp"
                android:layout_marginVertical="8dp"
                android:textAlignment="center"
                android:textColor="@color/black"
                tools:text="f6fc84c9f21c24907d6bee6eec38cabab5fa9a7be8c4a7827fe9e56f245bd2d5" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/get_visitor_id_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="@drawable/btn_ripple">

            <TextView
                style="@style/TextAppearance.MaterialComponents.Button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_run_btn"
                android:paddingVertical="16dp"
                android:text="@string/get_visitor_id_btn_text"
                android:textAlignment="center"
                android:textColor="@color/white" />
        </FrameLayout>

    </LinearLayout>
</FrameLayout>