<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLightGray">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="8dp"
        android:background="@drawable/bg_main"
        android:orientation="vertical"
        android:paddingVertical="148dp"
        tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="148dp"
            android:orientation="horizontal">

            <TextView
                style="@style/TextAppearance.MaterialComponents.Headline3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="16dp"
                android:text="@string/fingerprintjs"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="36sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_fingerprint"
                android:contentDescription="@null" />
        </LinearLayout>

        <TextView
            style="@style/TextAppearance.AppCompat.Button"
            android:id="@+id/btn_region_select"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/bg_inputs"
            android:padding="16dp"
            android:textSize="20sp"
            app:drawableEndCompat="@drawable/ic_expand_more_24px"
            tools:text="US" />

        <EditText
            android:id="@+id/endpoint_url_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:background="@drawable/bg_inputs"
            android:hint="@string/endpoint_url_input_hint"
            android:importantForAutofill="no"
            android:inputType="textUri"
            android:minHeight="48dp"
            android:padding="16dp"
            android:text="@string/endpoint_url_input_hint"
            android:textColor="#AAAAAA" />

        <EditText
            android:id="@+id/api_key_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/bg_inputs"
            android:hint="@string/api_token_input_hint"
            android:importantForAutofill="no"
            android:inputType="text"
            android:minHeight="48dp"
            android:padding="16dp"
            android:textColor="#AAAAAA" />

        <FrameLayout
            android:id="@+id/get_visitor_id_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="@drawable/btn_ripple">

            <TextView
                style="@style/TextAppearance.MaterialComponents.Button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_run_btn"
                android:padding="16dp"
                android:text="@string/get_visitor_id_btn_text"
                android:textAlignment="center"
                android:textColor="@color/white" />
        </FrameLayout>

    </LinearLayout>
</ScrollView>